--- a/manifest.json
+++ b/manifest.json
@@ -2,9 +2,9 @@
     {
         "name": "Now Playing Song's Release Date",
         "description": "This extension displays the currently playing track's release date next to the artist(s)",
-        "preview": "Extensions/now-playing-release-date/preview.jpg",
-        "main": "Extensions/now-playing-release-date/NowPlayingReleaseDate.js",
-        "readme": "Extensions/now-playing-release-date/README.md",
+        "preview": "now-playing-release-date/preview.jpg",
+        "main": "now-playing-release-date/NowPlayingReleaseDate.js",
+        "readme": "now-playing-release-date/README.md",
         "authors":
         [
             {
@@ -18,6 +18,7 @@
             "now playing",
             "release date",
             "currently playing"
-        ]
+        ],
+        "branch": "main"
     }
 ]
